@@ -1,4 +1,4 @@
-build.ver=1.2.11
+build.ver=1.2.12
 build.name=bb-ant-tools
 
 build.jar.file=${build.name}.jar
